--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -1,20 +1,50 @@
 <ion-header [translucent]="true">
   <ion-toolbar>
-    <ion-title>
-      Blank
-    </ion-title>
+    <ion-title>NEWS</ion-title>
   </ion-toolbar>
 </ion-header>
 
-<ion-content [fullscreen]="true">
+<ion-content [fullscreen]="true" class="ion-padding">
   <ion-header collapse="condense">
     <ion-toolbar>
-      <ion-title size="large">Blank</ion-title>
+      <ion-title size="large">NEWS</ion-title>
     </ion-toolbar>
   </ion-header>
 
-  <div id="container">
-    <strong>Ready to create an app?</strong>
-    <p>Start with Ionic <a target="_blank" rel="noopener noreferrer" href="https://ionicframework.com/docs/components">UI Components</a></p>
+  <div class="tags">
+    <ion-chip
+    *ngFor="let category of categories"
+    [class.active]="category.toLowerCase() === selectedCategory"
+    [class.deactiveTag]="category.toLowerCase() !== selectedCategory"
+    (click)="changeCategory(category)"
+  >
+    {{ category }}
+  </ion-chip>
   </div>
+
+  <div class="inputBox">
+    <ion-input type="text" [(ngModel)]="userInput" placeholder="Search news"></ion-input>
+    <ion-button (click)="getSearchedData()">Search</ion-button>
+  </div>
+
+  <div *ngIf="topHeadlines.length === 0" class="empty-state">
+    <p>No articles found. Try searching for something else.</p>
+  </div>
+
+  <ion-list>
+    <ion-row *ngFor="let article of topHeadlines">
+      <ion-col size="4">
+        <ion-thumbnail>
+          <img [src]="article.urlToImage" alt="News Image" />
+        </ion-thumbnail>
+      </ion-col>
+      <ion-col size="8" (click)="getDetails(article)">
+        <ion-label>
+          <h1 class="title">{{ article.title }}</h1>
+          <p>{{ article.publishedAt | date }}</p>
+          <p class="source"><span>Source -</span> {{ article.source?.name }}</p>
+        </ion-label>
+      </ion-col>
+    </ion-row>
+  </ion-list>
 </ion-content>
