--- a/src/app/home/home.page.scss
+++ b/src/app/home/home.page.scss
@@ -1,27 +1,117 @@
-#container {
-  text-align: center;
-
-  position: absolute;
-  left: 0;
-  right: 0;
-  top: 50%;
-  transform: translateY(-50%);
+/* Styling for ion-row */
+ion-row {
+  background-color: rgba(235, 235, 235, 0.3);
+  margin: 20px 0;
+  padding: 5px;
+  border-radius: 12px;
+  height: 15vh; /* Ensure uniform height */
+  transition: background-color 0.3s ease;
 }
 
-#container strong {
-  font-size: 20px;
-  line-height: 26px;
+ion-row:hover {
+  background-color: rgba(211, 211, 211, 0.3);
 }
 
-#container p {
+/* Styling for ion-col */
+ion-col {
+  display: flex;
+  flex-direction: column;
+}
+
+ion-col ion-thumbnail {
+  width: 100%;
+  height: 13vh;
+  border-radius: 8px;
+  overflow: hidden;
+}
+
+ion-col ion-thumbnail img {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+}
+
+/* Styling for labels */
+ion-col ion-label {
   font-size: 16px;
-  line-height: 22px;
-
-  color: #8c8c8c;
-
-  margin: 0;
+  font-weight: 400;
 }
 
-#container a {
-  text-decoration: none;
+ion-col ion-label p {
+  margin-top: 6px;
+  font-size: 14px;
+  font-weight: 500;
+  color: rgb(103, 103, 103);
+}
+
+ion-col ion-label .source {
+  margin-top: 0;
+  font-size: 13px;
+  color: grey;
+}
+
+ion-col ion-label .source span {
+  font-style: italic;
+}
+
+/* Styling for titles */
+.title {
+  font-size: 15px;
+  text-overflow: ellipsis;
+  color: black;
+  -webkit-line-clamp: 3; /* WebKit-based browsers */
+  line-clamp: 3;         /* Ensure the browser supports this */
+  display: -webkit-box; /* Flex container for line clamping */
+  -webkit-box-orient: vertical;
+  overflow: hidden;
+}
+
+/* Styling for ion-input */
+ion-input {
+  border: 2px solid #ccc;
+  width: 80%;
+  border-radius: 10px;
+  --padding-start: 10px;
+}
+
+/* Styling for input container */
+.inputBox {
+  margin-top: 20px;
+  display: flex;
+  align-items: center;
+  gap: 10px;
+}
+
+/* Styling for category tags */
+.tags {
+  display: flex;
+  flex-wrap: wrap;
+  gap: 8px;
+  margin-bottom: 16px;
+}
+
+.deactiveTag {
+  --background: #f4f4f4;
+  --color: #2c2c2c;
+  transition: all 0.3s ease;
+}
+
+.active {
+  --background: #3880ff;
+  --color: #fff;
+  font-weight: bold;
+}
+
+
+
+
+/* Styling for empty state */
+.empty-state {
+  height: 40vh;
+  text-align: center;
+  margin: 20px 0;
+  color: gray;
+  display: flex;
+  align-items: center;
+  font-size: 30px;
 }
